// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Native AddressBook component should renders correctly when addresses are not present 1`] = `
<StyledNativeComponent
  addressLabels={
    Object {
      "addNewAddress": "",
      "verifyAddress": "",
    }
  }
  addresses={Immutable.List []}
  deleteModalMountedState={false}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "addressLabels": Object {
          "addNewAddress": "",
          "verifyAddress": "",
        },
        "addresses": Array [],
        "deleteModalMountedState": false,
        "labels": Object {
          "addressBook": Object {
            "ACC_LBL_ADDRESS_BOOK_HEADING": "",
            "ACC_LBL_ADD_NEW_ADDRESS_CTA": "",
            "ACC_LBL_CREATE_ADDRESS_BOOK_BENEFIT_MSG": "",
            "ACC_LBL_CREATE_ADDRESS_BOOK_MSG": "",
          },
        },
        "onDefaultShippingAddressClick": [Function],
        "setDeleteModalMountState": [Function],
        "verificationResult": "",
      },
      "attrs": Array [],
      "displayName": "Styled(AddressView)",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          "
  margin-bottom: ",
          "100px",
          ";
",
          ";
  ",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labels={Object {}}
  onDefaultShippingAddressClick={[Function]}
  setDeleteModalMountState={[Function]}
  verificationResult=""
/>
`;

exports[`Native AddressBook component should renders correctly when addresses are present 1`] = `
<StyledNativeComponent
  addressLabels={
    Object {
      "addNewAddress": "",
      "verifyAddress": "",
    }
  }
  addresses={
    Immutable.List [
      Object {
        "addressLine": Array [
          "addressline 1",
          "addressline 2",
        ],
        "city": "test city",
        "country": "test country",
        "firstName": "test",
        "lastName": "test",
        "phone1": "1234567890",
      },
    ]
  }
  deleteModalMountedState={false}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "addressLabels": Object {
          "addNewAddress": "",
          "verifyAddress": "",
        },
        "addresses": Array [],
        "deleteModalMountedState": false,
        "labels": Object {
          "addressBook": Object {
            "ACC_LBL_ADDRESS_BOOK_HEADING": "",
            "ACC_LBL_ADD_NEW_ADDRESS_CTA": "",
            "ACC_LBL_CREATE_ADDRESS_BOOK_BENEFIT_MSG": "",
            "ACC_LBL_CREATE_ADDRESS_BOOK_MSG": "",
          },
        },
        "onDefaultShippingAddressClick": [Function],
        "setDeleteModalMountState": [Function],
        "verificationResult": "",
      },
      "attrs": Array [],
      "displayName": "Styled(AddressView)",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          "
  margin-bottom: ",
          "100px",
          ";
",
          ";
  ",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labels={Object {}}
  onDefaultShippingAddressClick={[Function]}
  setDeleteModalMountState={[Function]}
  verificationResult=""
/>
`;
